--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,5 @@
 ---
+
 spring:
   profiles:
     active: dev
@@ -10,6 +11,8 @@ welcome:
 
 server:
   port: 8081
+  servlet:
+    context-path: /movies
 
 ---
 
