--- a/manifest_prod.yml
+++ b/manifest_prod.yml
@@ -1,9 +1,12 @@
 ---
 applications:
   - name: movieservice
-    host: movieservices
+    host: movieservice
     path: ./build/libs/movieservice-0.0.1-SNAPSHOT.jar
     instances: 1
     buildpack: java_buildpack
     env:
       SPRING_PROFILES_ACTIVE: cloud,prod
+
+
+##cf push manifest_production.yml
